--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>Hello Coursera!</title>
 </head>
-<body><h1>Hello there 👋🏽</h1>
+<body><h1>Hello there 👋🏽 Welcome to my page!</h1>
 
 </body>
 </html>
