--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<title>Hello Coursera!</title>
-</head>
-<body><h1>Hello there 👋🏽 Welcome to my page!</h1>
-
-</body>
-</html>
+	<html>
+	<head>
+		<meta charset="utf-8">
+		<title>Hi there 👋🏽</title>
+	</head>
+	<body>
+	I love learning HTML, its so cool
+	</body>
+	</html>
