--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title>Hi there 👋🏽</title>
 	</head>
-	<body>
+	<body align=center>
 	I love learning HTML, its so cool
 	</body>
 	</html>
